...
                widget.navigationShell.goBranch(
                  index,
                  initialLocation: index == widget.navigationShell.currentIndex,
                );
              },
              destinations: const <NavigationDestination>[
                NavigationDestination(icon: _TabIcon(index: 0), label: '首页'),
                NavigationDestination(icon: _TabIcon(index: 1), label: '专题'),
                NavigationDestination(icon: _TabIcon(index: 2), label: '我的'),
              ],
            )
          : null,
    );
...
